# tangercode_V2_final

./: .env.example  .gitignore  CLAUDE.md  LICENSE  docker-compose.yml
tangercode-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
tangercode-backend/apps/admin_api/: apps.py  serializers.py  urls.py  views.py
tangercode-backend/apps/analytics/: README.md  apps.py  services.py  urls.py  views.py
tangercode-backend/apps/blog/: admin.py  models.py
tangercode-backend/apps/core/: admin.py  mixins.py  models.py  views.py
tangercode-backend/apps/faq/: admin.py  apps.py  models.py
tangercode-backend/apps/languages/: admin.py  apps.py  models.py
tangercode-backend/apps/messages_app/: admin.py  apps.py  models.py  services.py
tangercode-backend/apps/portfolio/: admin.py  models.py
tangercode-backend/apps/public_api/: apps.py  serializers.py  urls.py  views.py
tangercode-backend/apps/services/: admin.py  apps.py  models.py
tangercode-backend/apps/testimonials/: admin.py  apps.py  models.py
tangercode-backend/apps/translation/: admin.py  apps.py  clients.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
tangercode-backend/apps/users/: admin.py  apps.py  managers.py  models.py  (+6 more)
tangercode-backend/config/: asgi.py  celery_app.py  urls.py  wsgi.py
tangercode-backend/requirements/: base.txt  dev.txt  prod.txt
tangercode-backend/tests/: conftest.py  factories.py  test_admin_api.py  test_analytics.py  test_auth.py  test_contact.py  test_models.py  test_public_api.py  test_translation.py
(+188 files in other folders)
