# TANGER CODE — Python tooling configuration
[project]
name = "tangercode-backend"
version = "0.1.0"
description = "TANGER CODE — Django REST API backend"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '/(\.venv|venv|migrations)/'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
skip = ".venv,venv,migrations"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "venv", "migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by black)

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
python_files = ["test_*.py", "*_test.py"]
